--- a/daili2.yaml
+++ b/daili2.yaml
@@ -60,7 +60,7 @@ proxies:
   average: 9.49
   UpdateDay: '2022-05-12T15:30:29.194949'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 46982
+  Rank: 46832
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -118,7 +118,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 31532
+  Rank: 31382
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -131,7 +131,7 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 29293
+  Rank: 29143
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -188,7 +188,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 24351
+  Rank: 24451
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -316,21 +316,21 @@ proxies:
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
   Rank: 17177
-- name: 45.9.10.103:443@trojan
-  server: 45.9.10.103
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+- name: ssl.tcpbbr.net:443@trojan
+  server: ssl.tcpbbr.net
   port: 443
-  password: WpfQAbO2wg
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
+  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 160.41
-  maximum: 164.63
-  average: 162.13
-  UpdateDay: '2022-03-30T11:21:53.634848'
-  PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 15523
+  minimum: 38.29
+  maximum: 39.97
+  average: 38.95
+  UpdateDay: '2022-06-01T06:34:32.150069'
+  PFirstFoundDay: '2022-03-27T06:36:10.059372'
+  Rank: 15537
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -357,7 +357,7 @@ proxy-groups:
   - zgao.shop:443@trojan
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - 35.153.162.49:27080@vmess
-  - 45.9.10.103:443@trojan
+  - ssl.tcpbbr.net:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
