--- a/daili2.yaml
+++ b/daili2.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.87
-  maximum: 10.27
-  average: 8.12
-  UpdateDay: '2022-06-01T06:34:32.025726'
+  minimum: 6.54
+  maximum: 7.77
+  average: 7.22
+  UpdateDay: '2022-06-06T18:31:33.106388'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 50351
+  Rank: 50352
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -70,12 +70,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 8.72
-  maximum: 52.11
-  average: 34.75
-  UpdateDay: '2022-06-06T15:30:49.821234'
+  minimum: 36.7
+  maximum: 48.22
+  average: 42.95
+  UpdateDay: '2022-06-06T18:31:33.250552'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 35442
+  Rank: 35544
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -85,12 +85,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 113.76
-  maximum: 175.98
-  average: 138.08
-  UpdateDay: '2022-06-06T15:30:50.143429'
+  minimum: 105.65
+  maximum: 140.23
+  average: 120.34
+  UpdateDay: '2022-06-06T18:31:33.463329'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 34595
+  Rank: 34597
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -105,7 +105,7 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 31833
+  Rank: 31683
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -131,22 +131,22 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 29143
+  Rank: 28993
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 83.82
-  maximum: 93.5
-  average: 89.06
-  UpdateDay: '2022-06-06T15:30:49.988625'
+  minimum: 81.48
+  maximum: 100.31
+  average: 89.8
+  UpdateDay: '2022-06-06T18:30:39.242625'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 28437
+  Rank: 28438
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.96
-  maximum: 48.22
-  average: 43.38
-  UpdateDay: '2022-06-06T15:30:49.877414'
+  minimum: 41.96
+  maximum: 49.38
+  average: 46.37
+  UpdateDay: '2022-06-06T18:31:33.258984'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 25648
+  Rank: 25650
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -188,37 +188,37 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 24517
+  Rank: 24525
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 81.44
-  maximum: 87.81
-  average: 83.57
-  UpdateDay: '2022-06-06T15:30:49.932129'
+  minimum: 74.88
+  maximum: 82.62
+  average: 78.03
+  UpdateDay: '2022-06-06T18:31:33.340329'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 24098
+  Rank: 24100
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.81
-  maximum: 43.63
-  average: 40.74
-  UpdateDay: '2022-06-06T15:30:49.871527'
+  minimum: 46.29
+  maximum: 57.77
+  average: 50.25
+  UpdateDay: '2022-06-06T18:31:15.216741'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 22790
+  Rank: 22886
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -250,17 +250,17 @@ proxies:
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
-  password: 82a115db-6e59-4319-9730-8f5638908d59YWVzLTI1Ni1nY2023115_5a451f03
+  country: "\U0001F1FA\U0001F1F8 US"
+  password: 23115_5a451f03
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.7
-  maximum: 53.93
-  average: 47.28
-  UpdateDay: '2022-06-06T15:30:49.878151'
+  minimum: 38.29
+  maximum: 41.42
+  average: 39.95
+  UpdateDay: '2022-06-06T18:31:33.263516'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 20165
+  Rank: 20167
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -278,19 +278,19 @@ proxies:
   Rank: 18269
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
-  port: 889
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 889
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.44
-  maximum: 47.7
-  average: 43.36
-  UpdateDay: '2022-06-06T15:30:49.875558'
+  minimum: 40.88
+  maximum: 45.3
+  average: 43.4
+  UpdateDay: '2022-06-06T18:30:39.136019'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 18191
+  Rank: 18192
 - alterId: 0
   cipher: auto
   http-opts:
@@ -321,16 +321,16 @@ proxies:
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.99
-  maximum: 47.3
-  average: 43.8
-  UpdateDay: '2022-06-06T15:30:49.862296'
+  minimum: 38.63
+  maximum: 39.08
+  average: 38.89
+  UpdateDay: '2022-06-06T18:31:33.249313'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 15541
+  Rank: 15543
 proxy-groups:
 - name: PG-default
   type: fallback
